# spake2-java

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
spake2/: build.gradle.kts
spake2/src/androidMain/cpp/: CMakeLists.txt  CMakeLists_CurrentPlatform.cmake  spake2_jni.cpp
spake2/src/androidMain/cpp/spake2-c/: README.md  curve25519_32.h  ed25519.h  sha512.c  spake2.c  test.c
spake2/src/androidMain/cpp/spake2-c/include/spake2/: sha512.h  spake2.h
spake2/src/androidMain/kotlin/io/github/muntashirakon/crypto/spake2/: Spake2Context.kt  Spake2Role.kt
spake2/src/jvmMain/kotlin/io/github/muntashirakon/crypto/ed25519/: Curve.java  Ed25519.java  Ed25519Field.java  Ed25519FieldElement.java  Ed25519LittleEndianEncoding.java  Ed25519ScalarOps.java  FieldElement.java  GroupElement.java  Utils.java
spake2/src/jvmMain/kotlin/io/github/muntashirakon/crypto/spake2/: Spake2Context.java  Spake2Role.java
spake2/src/jvmTest/kotlin/io/github/muntashirakon/crypto/spake2/: Spake25519Test.java
